--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.githubuserapplication.detail.DetailViewModel" />
+            type="com.example.githubuserapplication.detail.DetailUserViewModel" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
